crates/pg_syntax/tests/snapshots/postgres_regress/tsrf@72.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select generate_series(1,3) as x, generate_series(3,6) + 1 as y;"
---
SelectStmt@0..64
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..32
    FuncCall@7..26
      Ident@7..22 "generate_series"
      Ascii40@22..23 "("
      AConst@23..24
        Iconst@23..24 "1"
      Ascii44@24..25 ","
      AConst@25..26
        Iconst@25..26 "3"
    Ascii41@26..27 ")"
    Whitespace@27..28 " "
    As@28..30 "as"
    Whitespace@30..31 " "
    Ident@31..32 "x"
  Ascii44@32..33 ","
  Whitespace@33..34 " "
  ResTarget@34..63
    AExpr@34..58
      FuncCall@34..53
        Ident@34..49 "generate_series"
        Ascii40@49..50 "("
        AConst@50..51
          Iconst@50..51 "3"
        Ascii44@51..52 ","
        AConst@52..53
          Iconst@52..53 "6"
      Ascii41@53..54 ")"
      Whitespace@54..55 " "
      Ascii43@55..56 "+"
      Whitespace@56..57 " "
      AConst@57..58
        Iconst@57..58 "1"
    Whitespace@58..59 " "
    As@59..61 "as"
    Whitespace@61..62 " "
    Ident@62..63 "y"
  Ascii59@63..64 ";"

