crates/pg_syntax/tests/snapshots/postgres_regress/tsrf@8.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT generate_series(1, generate_series(1, 3)), generate_series(2, 4);"
---
SelectStmt@0..72
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..46
    FuncCall@7..46
      Ident@7..22 "generate_series"
      Ascii40@22..23 "("
      AConst@23..24
        Iconst@23..24 "1"
      Ascii44@24..25 ","
      Whitespace@25..26 " "
      FuncCall@26..46
        Ident@26..41 "generate_series"
        Ascii40@41..42 "("
        AConst@42..43
          Iconst@42..43 "1"
        Ascii44@43..44 ","
        Whitespace@44..45 " "
        AConst@45..46
          Iconst@45..46 "3"
  Ascii41@46..47 ")"
  Ascii41@47..48 ")"
  Ascii44@48..49 ","
  Whitespace@49..50 " "
  ResTarget@50..70
    FuncCall@50..70
      Ident@50..65 "generate_series"
      Ascii40@65..66 "("
      AConst@66..67
        Iconst@66..67 "2"
      Ascii44@67..68 ","
      Whitespace@68..69 " "
      AConst@69..70
        Iconst@69..70 "4"
  Ascii41@70..71 ")"
  Ascii59@71..72 ";"

