crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@10.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT E'''1 \\\\''2'' 3'::tsvector;"
---
SelectStmt@0..34
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..33
    TypeCast@7..33
      AConst@7..23
        Sconst@7..23 "E'''1 \\\\''2'' 3'"
      Typecast@23..25 "::"
      TypeName@25..33
        Ident@25..33 "tsvector"
  Ascii59@33..34 ";"

