crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@102.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'supernova'::tsvector @@ 'super'::tsquery AS \"false\";"
---
SelectStmt@0..60
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..59
    AExpr@7..48
      TypeCast@7..28
        AConst@7..18
          Sconst@7..18 "'supernova'"
        Typecast@18..20 "::"
        TypeName@20..28
          Ident@20..28 "tsvector"
      Whitespace@28..29 " "
      Op@29..31 "@@"
      Whitespace@31..32 " "
      TypeCast@32..48
        AConst@32..39
          Sconst@32..39 "'super'"
        Typecast@39..41 "::"
        TypeName@41..48
          Ident@41..48 "tsquery"
    Whitespace@48..49 " "
    As@49..51 "AS"
    Whitespace@51..52 " "
    Ident@52..59 "\"false\""
  Ascii59@59..60 ";"

