crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@103.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'supeanova supernova'::tsvector @@ 'super'::tsquery AS \"false\";"
---
SelectStmt@0..70
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..69
    AExpr@7..58
      TypeCast@7..38
        AConst@7..28
          Sconst@7..28 "'supeanova supernova'"
        Typecast@28..30 "::"
        TypeName@30..38
          Ident@30..38 "tsvector"
      Whitespace@38..39 " "
      Op@39..41 "@@"
      Whitespace@41..42 " "
      TypeCast@42..58
        AConst@42..49
          Sconst@42..49 "'super'"
        Typecast@49..51 "::"
        TypeName@51..58
          Ident@51..58 "tsquery"
    Whitespace@58..59 " "
    As@59..61 "AS"
    Whitespace@61..62 " "
    Ident@62..69 "\"false\""
  Ascii59@69..70 ";"

